Add GetExerciseUseCase and /exercises/{id} endpoint
